samples/_failures_safe/1761169313_a21737_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60058923.c: In function ‘main’:
./samples/SAFE/__tmp_60058923.c:169:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  169 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_60058923.c:169:5: error: expected declaration or statement at end of input
